configure: Add NDN_IND_HAVE_BOOST_FILESYSTEM and BOOST_FILESYSTEM_LIB. See pull request #15.

--- a/configure.ac
+++ b/configure.ac
@@ -72,6 +72,7 @@ AX_BOOST_BASE([1.48])
 
 AX_BOOST_ASIO
 AX_BOOST_CHRONO
+AX_BOOST_FILESYSTEM
 
 AC_MSG_CHECKING([for std::shared_ptr])
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
