--- a/VisualStudio/ndn-ind/ndn-ind.vcxproj
+++ b/VisualStudio/ndn-ind/ndn-ind.vcxproj
@@ -21,32 +21,32 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b8004bd7-1372-4b5d-bf63-07696760c53b}</ProjectGuid>
+    <ProjectGuid>{5adc4a32-007a-4f7b-a1fa-630cf3b3f060}</ProjectGuid>
     <RootNamespace>ndnind</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -86,15 +86,15 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;NDNIND_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -103,44 +103,33 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;NDNIND_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PrecompiledHeaderFile>
-      </PrecompiledHeaderFile>
-      <CompileAsManaged>false</CompileAsManaged>
-      <AdditionalIncludeDirectories>..\..\..\vcpkg\installed\x64-windows\include;..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp17</LanguageStandard>
-      <OmitDefaultLibName>true</OmitDefaultLibName>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;NDN_IND_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EnableUAC>false</EnableUAC>
     </Link>
-    <Lib>
-      <AdditionalDependencies>libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
-    <Lib>
-      <AdditionalLibraryDirectories>C:\Users\remap\Documents\GitHub\vcpkg\installed\x64-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -148,32 +137,27 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;NDN_IND_EXPORTS;_WINDOWS;_USRDLL;_CRT_SECURE_NO_WARNINGS;_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>..\..\..\vcpkg\installed\x64-windows\include;..\..\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\vcpkg\installed\x64-windows\include;..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAsManaged>false</CompileAsManaged>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EnableUAC>false</EnableUAC>
+      <AdditionalLibraryDirectories>..\..\..\vcpkg\installed\x64-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libcrypto.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
-    <Lib>
-      <AdditionalDependencies>libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
-    <Lib>
-      <AdditionalLibraryDirectories>C:\Users\remap\Documents\GitHub\vcpkg\installed\x64-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\contrib\apache\apr_base64.h" />
     <ClInclude Include="..\..\contrib\murmur-hash\murmur-hash.h" />
-    <ClInclude Include="..\..\include\ndn-ind\ndn-ind-config.h" />
     <ClInclude Include="..\..\src\c\control-parameters.h" />
     <ClInclude Include="..\..\src\c\control-response.h" />
     <ClInclude Include="..\..\src\c\data.h" />
@@ -217,6 +201,7 @@
     <ClInclude Include="..\..\src\c\transport\socket-transport.h" />
     <ClInclude Include="..\..\src\c\transport\tcp-transport.h" />
     <ClInclude Include="..\..\src\c\transport\udp-transport.h" />
+    <ClInclude Include="..\..\src\c\transport\unix-transport.h" />
     <ClInclude Include="..\..\src\c\util\blob.h" />
     <ClInclude Include="..\..\src\c\util\crypto.h" />
     <ClInclude Include="..\..\src\c\util\dynamic-uint8-array.h" />
@@ -227,7 +212,6 @@
     <ClInclude Include="..\..\src\encoding\der\der-exception.hpp" />
     <ClInclude Include="..\..\src\encoding\der\der-node-type.hpp" />
     <ClInclude Include="..\..\src\encoding\der\der-node.hpp" />
-    <ClInclude Include="..\..\src\encoding\element-listener.hpp" />
     <ClInclude Include="..\..\src\encoding\tlv-decoder.hpp" />
     <ClInclude Include="..\..\src\encoding\tlv-encoder.hpp" />
     <ClInclude Include="..\..\src\impl\delayed-call-table.hpp" />
@@ -245,6 +229,7 @@
     <ClInclude Include="..\..\src\sync\detail\psync-state.hpp" />
     <ClInclude Include="..\..\src\sync\detail\psync-user-prefixes.hpp" />
     <ClInclude Include="..\..\src\sync\digest-tree.hpp" />
+    <ClInclude Include="..\..\src\transport\async-socket-transport.hpp" />
     <ClInclude Include="..\..\src\util\boost-info-parser.hpp" />
     <ClInclude Include="..\..\src\util\command-interest-generator.hpp" />
     <ClInclude Include="..\..\src\util\config-file.hpp" />
@@ -259,6 +244,8 @@
     <ClInclude Include="..\..\src\util\regex\ndn-regex-repeat-matcher.hpp" />
     <ClInclude Include="..\..\src\util\regex\ndn-regex-top-matcher.hpp" />
     <ClInclude Include="..\..\src\util\sqlite3-statement.hpp" />
+    <ClInclude Include="framework.h" />
+    <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\contrib\apache\apr_base64.c" />
@@ -366,6 +353,7 @@
     <ClCompile Include="..\..\src\lite\signature-lite.cpp" />
     <ClCompile Include="..\..\src\lite\transport\tcp-transport-lite.cpp" />
     <ClCompile Include="..\..\src\lite\transport\udp-transport-lite.cpp" />
+    <ClCompile Include="..\..\src\lite\transport\unix-transport-lite.cpp" />
     <ClCompile Include="..\..\src\lite\util\blob-lite.cpp" />
     <ClCompile Include="..\..\src\lite\util\crypto-lite.cpp" />
     <ClCompile Include="..\..\src\lite\util\dynamic-malloc-uint8-array-lite.cpp" />
@@ -444,9 +432,12 @@
     <ClCompile Include="..\..\src\sync\full-psync2017.cpp" />
     <ClCompile Include="..\..\src\sync\psync-producer-base.cpp" />
     <ClCompile Include="..\..\src\threadsafe-face.cpp" />
+    <ClCompile Include="..\..\src\transport\async-tcp-transport.cpp" />
+    <ClCompile Include="..\..\src\transport\async-unix-transport.cpp" />
     <ClCompile Include="..\..\src\transport\tcp-transport.cpp" />
     <ClCompile Include="..\..\src\transport\transport.cpp" />
     <ClCompile Include="..\..\src\transport\udp-transport.cpp" />
+    <ClCompile Include="..\..\src\transport\unix-transport.cpp" />
     <ClCompile Include="..\..\src\util\boost-info-parser.cpp" />
     <ClCompile Include="..\..\src\util\command-interest-generator.cpp" />
     <ClCompile Include="..\..\src\util\config-file.cpp" />
