--- a/VisualStudio/ndn-ind/ndn-ind-tools.vcxproj
+++ b/VisualStudio/ndn-ind/ndn-ind-tools.vcxproj
@@ -85,7 +85,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <TargetName>ndn-ind-tools</TargetName>
-    <IncludePath>..\..\..\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\..\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -153,7 +153,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalLibraryDirectories>..\x64\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>x64\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>ndn-ind.lib; libprotobuf.lib; libcrypto.lib; kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -161,22 +161,22 @@
     <None Include="cpp.hint" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\tools\micro-forwarder\micro-forwarder-transport.cpp" />
-    <ClCompile Include="..\..\..\tools\micro-forwarder\micro-forwarder.cpp" />
-    <ClCompile Include="..\..\..\tools\usersync\channel-discovery.cpp" />
-    <ClCompile Include="..\..\..\tools\usersync\content-meta-info.cpp" />
-    <ClCompile Include="..\..\..\tools\usersync\content-meta-info.pb.cc" />
-    <ClCompile Include="..\..\..\tools\usersync\generalized-content.cpp" />
-    <ClCompile Include="..\..\..\tools\usersync\prefix-discovery.cpp" />
+    <ClInclude Include="..\..\include\ndn-ind-tools\micro-forwarder\micro-forwarder-transport.hpp" />
+    <ClInclude Include="..\..\include\ndn-ind-tools\micro-forwarder\micro-forwarder.hpp" />
+    <ClInclude Include="..\..\include\ndn-ind-tools\usersync\channel-discovery.hpp" />
+    <ClInclude Include="..\..\include\ndn-ind-tools\usersync\content-meta-info.hpp" />
+    <ClInclude Include="..\..\include\ndn-ind-tools\usersync\generalized-content.hpp" />
+    <ClInclude Include="..\..\include\ndn-ind-tools\usersync\prefix-discovery.hpp" />
+    <ClInclude Include="..\..\tools\usersync\content-meta-info.pb.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\include\ndn-ind-tools\micro-forwarder\micro-forwarder-transport.hpp" />
-    <ClInclude Include="..\..\..\include\ndn-ind-tools\micro-forwarder\micro-forwarder.hpp" />
-    <ClInclude Include="..\..\..\include\ndn-ind-tools\usersync\channel-discovery.hpp" />
-    <ClInclude Include="..\..\..\include\ndn-ind-tools\usersync\content-meta-info.hpp" />
-    <ClInclude Include="..\..\..\include\ndn-ind-tools\usersync\generalized-content.hpp" />
-    <ClInclude Include="..\..\..\include\ndn-ind-tools\usersync\prefix-discovery.hpp" />
-    <ClInclude Include="..\..\..\tools\usersync\content-meta-info.pb.h" />
+    <ClCompile Include="..\..\tools\micro-forwarder\micro-forwarder-transport.cpp" />
+    <ClCompile Include="..\..\tools\micro-forwarder\micro-forwarder.cpp" />
+    <ClCompile Include="..\..\tools\usersync\channel-discovery.cpp" />
+    <ClCompile Include="..\..\tools\usersync\content-meta-info.cpp" />
+    <ClCompile Include="..\..\tools\usersync\content-meta-info.pb.cc" />
+    <ClCompile Include="..\..\tools\usersync\generalized-content.cpp" />
+    <ClCompile Include="..\..\tools\usersync\prefix-discovery.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
